[Refactor] 내부 로직 변경